# kernel_oppo_sm8250

./: AndroidKernel.mk  Makefile  OplusKernelEnvConfig.mk
Wireless_Tools/: Android.mk  Makefile  iwlib.c
arch/arm64/: Kconfig
arch/arm64/configs/: op4a79-perf_defconfig  op4a79_defconfig  (+1 more)
asoc/: kona.c
ath6kl-utils/: Android.mk  NOTICE  configure.ac
ath6kl-utils/artagent/: Android.mk  artagent.c
ath6kl-utils/ath6kl-fwlog/: Android.mk
ath6kl-utils/ath6kl-tcmd/: Android.mk  athtestcmd.c  athtestcmd_ar6004.c
ath6kl-utils/libathtestcmd/: Android.mk  Makefile.am  athtestcmdlib.c  testcmd6174.h
ath6kl-utils/libathtestcmd/libtlv2/: Android.mk  Makefile.am
ath6kl-utils/libathtestcmd/libtlv2/cmdEncoder/: tlvCmdEncoder.c
ath6kl-utils/libathtestcmd/libtlv2/cmdParser/: cmdHandlerTbl.c  cmdOfdmaTonePlan.c  cmdOfdmaULTxConfig.c
ath6kl-utils/libathtestcmd/libtlv2/common/: cmdRspParmsDict.c
ath6kl-utils/libathtestcmd/libtlv2/include/: art_utf_common.h  cmdHandlers.h  cmdOfdmaTonePlan.h  cmdOfdmaULTxConfig.h  cmdRspParmsDict.h  cmdStreamCommon.h  tlv2Api.h
ath6kl-utils/libtcmd/: Android.mk  Makefile.am  libtcmd.c  libtcmd.h  nl80211.c  os.c
ath6kl-utils/myftm/: Android.mk  Makefile.am  myftm_main.c  myftm_qtip.c  myftm_wlan.c  myftm_wlan.h
config/: konaauto.conf  konadisp.conf
dnsmasq/src/: dnsmasq.h  lease.c  network.c  rfc1035.c  rfc2131.c  util.c
drivers/: Kconfig
drivers/android/: binder.c
drivers/cam_isp/: cam_isp_context.c
drivers/cam_jpeg/: cam_jpeg_context.c
drivers/cam_req_mgr/: cam_req_mgr_core.c  cam_req_mgr_core.h  cam_req_mgr_dev.c  cam_req_mgr_interface.h
drivers/char/: adsprpc.c
drivers/gpio/: gpiolib.c
drivers/input/: Kconfig  Makefile
drivers/misc/: Kconfig  Makefile
drivers/net/: Makefile
drivers/nfc/: nq-nci.c
drivers/power/: Kconfig  Makefile
drivers/sensors/: sensors_ssc.c
drivers/soc/: Kconfig  Makefile
drivers/thermal/: Makefile
dsp/: q6afe.c  rtac.c
ffmpeg_cm_14_1/: Makefile  build_ffmpeg_android.sh  readme.txt
ffmpeg_cm_14_1/android/: build.mk  config-silvermont.mak  config-x86.mak  config.mak
ffmpeg_cm_14_1/libavformat/: Android.mk  NOTICE  allformats.c  avformat.h  oggdec.c
ffmpeg_cm_14_1/libswresample/: Android.mk
ffmpeg_cm_14_1/libswscale/: Android.mk
ffmpeg_cm_14_1/prebuilt/: Android_prebuilt.mk
fs/f2fs/: checkpoint.c  file.c
fs/jbd2/: commit.c
fs/proc/: base.c
include/asoc/: wcd-mbhc-v2.h
include/linux/: blkdev.h  cpufreq.h  firmware.h  kobject.h  msm_drm_notify.h  mutex.h  power_supply.h  rwsem.h  sched.h  ufshcd-platform.h
iptables/extensions/: libxt_IMQ.c
kernel/: Makefile  fork.c  futex.c  hung_task.c  panic_flush.c
kernel/locking/: mutex.c  rwsem-xadd.c  rwsem.h
kernel/oppocfs/: oppo_cfs_common.S  oppo_cfs_common_user.S  oppo_cfs_futex.S  oppo_cfs_futex_user.S  oppo_cfs_mutex.S  oppo_cfs_mutex_user.S  oppo_cfs_rwsem.S  oppo_cfs_rwsem_user.S
kernel/power/: main.c
kernel/sched/: core.c  fair.c  sched.h  tune.c  walt.c
mm/: Makefile
msm/: Makefile
msm-4.19/kernel/: Makefile  fork.c  futex.c  sysctl.c
msm-4.19/mm/: memory_monitor.c  process_mm_reclaim.c  resmap_account.c  slub_debug.c
msm/dsi/: dsi_ctrl.c  dsi_defs.h  dsi_display.c  dsi_panel.c
msm/sde/: sde_connector.c
net/: Makefile
net/netfilter/: Makefile
ntfs-3g/: Android.mk  CREDITS  config.h
ntfs-3g/include/: Makefile
ntfs-3g/libfuse-lite/: Makefile
ntfs-3g/libntfs-3g/: Makefile  libntfs-3g.pc
ntfs-3g/ntfsprogs/: Makefile
ntfs-3g/src/: Makefile  secaudit.c  secaudit.h
scripts/: Makefile.lib
security/selinux/: Kconfig
soc/: swr-mstr-ctrl.c  swr-mstr-ctrl.h
sysklogd-1.5/: README.oppo  klogd.c  pidfile.c
techpack/camera/: Makefile
(+414 files in other folders)
